feat(api): update api spec for authentication
